--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -83,7 +83,7 @@
 </div>
 <div id="footer">
     <span>
-      Copyright © 2025 <a href="https://github.com/uhaiin"> jiancai.zhong </a>
+      Copyright © 2025 <a href="https://resume.sudns.cc/"> sudasheng </a>
     </span>
 </div>
 </body>
